Fixed bulk load button on mobile view

--- a/static/src/output.css
+++ b/static/src/output.css
@@ -7248,6 +7248,10 @@ body > div.flex.grow.justify-center.choices__list--single .choices__item > div >
 }
 
 @media (min-width: 1064px){
+  .laptop\:mb-0{
+    margin-bottom: 0px;
+  }
+
   .laptop\:columns-3{
     -moz-columns: 3;
          columns: 3;
